eks-istio-service/manifests/microservice_istio_template.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: MICROSERVICE_NAME-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: MICROSERVICE_NAME
spec:
  hosts:
  - "*"
  gateways:
  - MICROSERVICE_NAME-gateway
  http:
  - match:
    - uri:
        prefix: /MICROSERVICE_NAME
    route:
    - destination:
        host: MICROSERVICE_NAME
        port:
          number: MICROSERVICE_PORT
